--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ parchment_mappings_version=2025.01.05
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=aviros
 # The human-readable display name for the mod.
-mod_name=aviros
+mod_name=Aviros
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
